--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     
 </head>
 <body>
+
+  
     <nav class="navbar">
         <div class = "brand">
-            Monitary Dietary
+            BetterUDiet
         </div>
         <a class="ham-icon" href="#">
             <span class="items"></span>
@@ -32,13 +34,16 @@
                 <li>
                     <a href="#Contacts">Contacts</a>
                 </li>
+                <li>
+                  <a href="login.html">SignIn / Login</a>
+              </li>
             </ul>
         </div>
     </nav>
 
     <main>
         <div id="Home" class="website-banner-title">
-            <h1 class="website-name">Monitary Dietary
+            <h1 class="website-name">BetterUDiet
             </h1>
 
             <div class="intro">WHAT IS DIET PLANNING?<br>
@@ -53,25 +58,25 @@
             <h1 class="disease">Disease Specific Nutrient-Platter</h1>
             <div class="row">
                 <div class="col col-1">
-                        <h5>Diabetes</h5>
+                  <a href=""><h5>Diabetes</h5></a>
                 </div>
 
                 <div class="col col-2">
-                    <h5>Thyroid</h5>
+                  <a href=""> <h5>Thyroid</h5></a>
                 </div>
 
                 <div class="col col-3">
-                    <h5>Obesity</h5>
+                  <a href=""><h5>Obesity</h5></a>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col col-4">
-                    <h5>Anemia</h5>
+                  <a href=""> <h5>Anemia</h5></a>
                 </div>
 
                 <div class="col col-5">
-                    <h5>Arthritis</h5>
+                  <a href=""> <h5>Arthritis</h5></a>
                 </div>
             </div>
 
@@ -136,6 +141,8 @@
 
 
     </main>
+
+
     <script src="script.js"></script>
 </body>
 </html>
